# tfg_social

./: README.md
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/src/: keyboard_control.cpp
missions_pkg/: CMakeLists.txt  package.xml
missions_pkg/launch/: initial_tasks.yaml  main.launch  simbot_costmap_common_params.yaml  simbot_costmap_global_params.yaml  simbot_costmap_local_params.yaml  simbot_fake_battery.launch  simbot_fake_loc.launch  simbot_global_planner_params.yaml  simbot_keyboard_control.launch  simbot_local_planner_params.yaml  simbot_map_server.launch  simbot_move_base.launch  simbot_stage.launch  simbot_urdf.launch  simple_move.launch  social_move.launch
missions_pkg/maps/: UMA_236_237.yaml
missions_pkg/rviz/: simbot_patrol.rviz
missions_pkg/stage/: UMA_236_237.world
scenes/: interacting_people_scene.ttt  narrow_space_scene.ttt  narrow_space_test.ttt  ros1_mapirlab_pioneer.ttt  speed_adjustment_scene.ttt
social_pkg/: CMakeLists.txt  package.xml
social_pkg/include/social_pkg/: avoid_interruption.hpp  configure_speed_server.hpp  narrow_space_bhv.hpp  people_detect.hpp  speed_reconfigure.hpp
social_pkg/launch/: sim.launch  social.launch
social_pkg/src/: avoid_interruption.cpp  configure_speed_server.cpp  narrow_space_bhv.cpp  people_detect.cpp  speed_reconfigure.cpp
social_pkg/srv/: configure_speed.srv
stage_ros/: CMakeLists.txt
stage_ros/src/: stageros.cpp
utils_pkg/: CMakeLists.txt  package.xml
utils_pkg/include/utils_pkg/: pose_to_people.hpp  poses_publisher.hpp
utils_pkg/src/: pose_to_people.cpp  poses_publisher.cpp  poses_service.cpp
