<?xml version="1.0"?>
<package>
  <name>keyboard_control</name>
  <version>0.0.0</version>
  <description>A generic and very basic control of a mobile robot base through keyboard</description>
  
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>  
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
