<?xml version="1.0"?>
<package>
  <name>missions_pkg</name>
  <version>0.0.0</version>
  <description>A simple pkg for holding launch files</description>

  
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
